// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`routes > schema > putSchema > audit > expected call 1`] = `
{
  "active": false,
  "description": "recusandae",
  "id": "recusandae",
  "jsonSchema": {},
  "kind": "accessRequest",
  "name": "Jaime Hilll",
}
`;

exports[`routes > schema > putSchema > successfully updates the schema 1`] = `
{
  "schema": {
    "active": false,
    "description": "recusandae",
    "id": "recusandae",
    "jsonSchema": {},
    "kind": "accessRequest",
    "name": "Jaime Hilll",
  },
}
`;
